<resources>
    <string name="app_name">ImLibrary</string>
    <string name="im_message">消息</string>
    <string name="im_conversation">聊天</string>
    <string name="im_group">群聊</string>
    <string name="im_send">发送</string>
    <string name="im_please_to_talk">按住 说话</string>
    <string name="im_shot">拍摄</string>
    <string name="im_share">分享</string>
    <string name="im_location">拍摄</string>
    <string name="im_red_pack">红包</string>
    <string name="im_album">图片</string>
    <string name="im_chat_detail">聊天详情</string>
    <string name="im_chat_infor">聊天信息</string>
    <string name="im_totle_readed">全部已读</string>
    <string name="im_msg_setting">消息设置</string>
    <string name="im_chat_root">聊天室大厅</string>
    <string name="im_group_number_online">群总人数</string>
    <string name="im_group_chat_hostroy">聊天记录</string>
    <string name="im_group_mine_name">我的昵称</string>
    <string name="im_group_no_notice">消息免打扰</string>
    <string name="im_group_notice">群公告提醒</string>
    <string name="im_group_update_notice">（更新公告）</string>
    <string name="im_group_clear_message">清空群消息</string>
    <string name="im_open_setting">请在“设置”-“通知”中进行修改</string>
    <string name="im_new_notice_setting">新消息通知</string>
    <string name="im_open_notice">去开启</string>
    <string name="im_recieve_mesg">当APP内收到新消息时，你希望</string>
    <string name="im_setting_app_notice">APP内弹窗通知</string>
    <string name="im_setting_app_voice">声音提醒</string>
    <string name="im_setting_app_shake">震动提醒</string>
    <string name="im_setting_app_push">消息推送</string>
    <string name="im_setting_app_btn">清空全部消息</string>
    <string name="im_loading_text">正在处理中，请稍后...</string>
    <string name="im_has_read">已读</string>
    <string name="im_no_read">未读</string>
    <string name="im_has_at">[有人@我]</string>
    <string name="im_pay_bank">银行卡充值</string>
    <string name="im_pay_wx">微信充值</string>
    <string name="im_pay_apliy">支付宝充值</string>
    <string name="im_get_money">提现</string>
    <string name="im_permission_request_denied">需要相應的權限</string>
    <string name="im_error_gif">長寬不小于 %1$dpx，且大小不超過 %2$sM。</string>
    <string name="im_back">返回</string>
    <string name="im_bet_record">投注记录</string>
    <string name="im_bet_details">注单明细</string>
    <string name="im_bet_share">注单分享</string>
    <string name="im_cancle">取消</string>
    <string name="im_ensure">确认</string>
    <string name="im_share_success">恭喜你，分享成功！</string>
    <string name="im_share_fail">分享失败！</string>
    <string name="im_send_red">发红包</string>
    <string name="im_send_content">恭喜发财，大吉大利！</string>
    <string name="im_send_btn">塞钱进红包</string>
    <string name="im_red_type">当前为拼手气红包</string>
    <string name="im_pay_word">请输入支付密码</string>
    <string name="im_notice_know">知道了</string>
    <string name="im_pay_password">密码个数必须为4-12位</string>
    <string name="im_swith_no">此功能暂未开启</string>

    <string name="voice_rec">手指上滑，取消发送</string>
    <string name="voice_cancel">松开手指，取消发送</string>
    <string name="voice_short">录音时间太短</string>
    <string name="im_conversation_title">聊天</string>
    <string name="im_conversation_bj">编辑</string>
    <string name="please_to_talk">按住 说话</string>
    <string name="is_not_friend">你们已经不是好友，请添加好友发送消息</string>
    <string name="you_forbit">您已被屏蔽</string>
</resources>


