<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@color/color_f5f5f5">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_bank_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/im_shape_im_commom_bg_cor14"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="11dp"
            android:text="@string/im_pay_bank" />

        <TextView
            android:id="@+id/tv_wx_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@drawable/im_shape_im_commom_bg_cor14"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="13dp"
            android:text="@string/im_pay_wx" />
        <TextView
            android:id="@+id/tv_apliy_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/im_shape_im_commom_bg_cor14"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="13dp"
            android:text="@string/im_pay_apliy" />
        <TextView
            android:id="@+id/tv_get_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/im_shape_im_commom_bg_cor14"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="13dp"
            android:text="@string/im_get_money" />
    </LinearLayout>
</HorizontalScrollView>