<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ededf7"
    android:orientation="vertical">
    <include layout="@layout/layout_im_top_commer_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/im_shape__bg4"
        android:layout_height="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp">
        <ImageView
            android:id="@+id/im_iv_pin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/im_chat_red_pin"
            android:layout_marginLeft="13dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/im_tv_je"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="总金额"
            android:textSize="17dp"
            android:layout_toRightOf="@id/im_iv_pin"
            android:textColor="@color/color_333333"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:layout_marginLeft="13dp"/>
        <TextView
            android:id="@+id/im_tv_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="元"
            android:textColor="@color/color_333333"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <EditText
            android:id="@+id/im_et_money"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/im_tv_yuan"
            android:textSize="17dp"
            android:hint="0.00"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"
            android:gravity="end"
            android:digits="0123456789."
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/im_tv_sq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/im_red_type"
        android:textColor="@color/color_333333"
        android:textSize="14dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="31dp" />
    <RelativeLayout
        android:id="@+id/im_rl_number"
        android:layout_width="match_parent"
        android:background="@drawable/im_shape__bg4"
        android:layout_height="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="红包个数"
            android:textSize="17dp"
            android:textColor="@color/color_333333"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/im_tv_ge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="个"
            android:textColor="@color/color_333333"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <EditText
            android:id="@+id/im_et_number"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/im_tv_ge"
            android:textSize="17dp"
            android:hint="0"
            android:background="@null"
            android:gravity="end"
            android:maxLength="3"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/im_tv_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_999999"
        android:textSize="14dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="31dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/im_shape__bg4"
        android:layout_height="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="18dp">
        <EditText
            android:id="@+id/im_et_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="17dp"
            android:hint="@string/im_send_content"
            android:background="@null"
            android:maxLength="10"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_999999"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/color_333333"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true" />
        <TextView
            android:id="@+id/im_tv_tltle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="36dp"
            android:textStyle="bold"
            android:textColor="@color/color_333333"
            android:layout_centerVertical="true"
            android:drawablePadding="10dp"
            android:layout_marginLeft="6dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/im_tv_send"
        android:layout_width="188dp"
        android:layout_height="41dp"
        android:textSize="20dp"
        android:text="@string/im_send_btn"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/im_shape_red_bg"
        android:layout_centerVertical="true"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_alignParentRight="true" />
</LinearLayout>